# embedded-nov-2025

./: Cargo.toml
.helix/: languages.toml
.zed/: debug.json  settings.json
src/: lib.rs
src/bmp280/: i2c.rs  mod.rs  spi.rs
src/bmp390/: i2c.rs  mod.rs
src/bmp390_complex/: registers.rs
