[package]
name = "embedded-workshop-skeleton"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "3e8d8fe", features = [
    "defmt",
    "stm32u545re",
    "unstable-pac",
    "memory-x",
    "time-driver-tim4",
    "exti",
    # "chrono",
] }

# Embedded HAL utilities
embassy-embedded-hal = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "3e8d8fe", features = [
    "defmt",
] }

# Synchronization primitives and data structures with async support
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy", rev = "3e8d8fe", features = [
    "defmt",
] }

# Async/await executor
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", rev = "3e8d8fe", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }

# Utilities for working with futures, compatible with no_std and not using alloc
embassy-futures = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", rev = "3e8d8fe" }

# Timekeeping, delays and timeouts
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "3e8d8fe", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

# USB device
# embassy-usb = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy", rev = "3e8d8fe", features = [
#     "defmt",
# ] }

# Defmt support
defmt = "0.3"
defmt-rtt = "0.4"

# Low level access to Cortex-M processors
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }

# Boostrap crate for Cortex-M Processors
cortex-m-rt = "0.7.5"

# Panic handler that exits `probe-run` with an error code
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
